--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "pinia": "^2.0.21",
-    "sass": "^1.56.1",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
@@ -29,6 +28,8 @@
     "jsdom": "^20.0.0",
     "vite": "^3.0.9",
     "vite-plugin-eslint": "^1.8.1",
-    "vitest": "^0.23.0"
+    "vitest": "^0.23.0",
+    "vite-plugin-require-transform": "^1.0.4",
+    "sass": "^1.56.1"
   }
 }
